--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MI PORFOLIO</title>
+
+    <title>MI PORTFOLIO</title>
     <script src="https://kit.fontawesome.com/23ecf5d810.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="STYLE.CSS">
+    <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
     </style>
@@ -28,6 +29,7 @@
                 <a class="navbar-brand" href="#">
                     <img src="ASSETS/APLogo-20-20 (1).png" alt="" width="20%" height="..."></a>
                 <ul class="list-group list-group-horizontal">
+                    <!--<a target="_blank" href="http://www.clarin.com">Ir a Clarin</a>-->
                     <li class="list-group-item"><i class="fa-brands fa-instagram fa-2xl"></i></li>
                     <li class="list-group-item"><i class="fa-brands fa-linkedin fa-2xl"></i></li>
                     <li class="list-group-item"><i class="fa-brands fa-facebook fa-2xl"></i></li>
@@ -41,44 +43,44 @@
                 </ul>
 
 
-               
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
         </nav>
-         <!-- Modal -->
-         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-         <div class="modal-dialog">
-             <div class="modal-content">
-                 <div class="modal-header">
-                     <h5 class="modal-title" id="exampleModalLabel">Loguin</h5>
-                     <button type="button" class="btn-close" data-bs-dismiss="modal"
-                         aria-label="Close"></button>
-                 </div>
-                 <div class="modal-body">
-                     <div class="mb-3 row">
-                         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-                         <div class="col-sm-10">
-                             <input type="text" class="form-control-plaintext" id="staticEmail"
-                                 value="email@dominio.com">
-                         </div>
-                     </div>
-                     <div class="mb-3 row">
-                         <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                         <div class="col-sm-10">
-                             <input type="password" class="form-control" id="inputPassword">
-                         </div>
-                     </div>
-                 </div>
-                 <div class="modal-footer">
-                     <button type="button" class="btn btn-primary">Iniciar Sesion</button>
-                 </div>
-             </div>
-         </div>
-     </div>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Loguin</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3 row">
+                            <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control-plaintext" id="staticEmail"
+                                    value="email@dominio.com">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control" id="inputPassword">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">Iniciar Sesion</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--Banner
         <div class="banner">
             <img src="ASSETS/imagen computacion para banner4.jpg" class="img-fluid" alt="...">
@@ -92,10 +94,12 @@
                 <div class="col-3">
                     <img src="ASSETS/foto Ale.jpg" alt="..." width="100%" title="Foto Alejandra">
                     <h3 id="cursiva">Alejandra Visconti</h3>
+                    <h5 class="clh5">Programadora Full Stack Jr.</h5>
                 </div>
                 <div class="col-9">
-                    <h1>Sobre mí</h1>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat velit fuga doloribus assumenda
+                    <h1 class="clh1">Sobre mí</h1>
+                    <h4 class="clh4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat velit fuga
+                        doloribus assumenda
                         numquam
                         ipsum iure qui voluptas cum. Blanditiis cupiditate laboriosam veritatis commodi recusandae, fuga
                         dignissimos asperiores vel aliquam.</h4>
@@ -107,17 +111,17 @@
         <br>
         <!--Experiencia-->
         <section id="experiencia" class="experiencia">
-            <h1>Experiencia</h1>
+            <h1 class="clh1">Experiencia</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-2">
                         <img id="imagen" src="ASSETS/Logo Alcatel.jpg" class="img-fluid" alt="...">
                     </div>
                     <div class="col-1">
-                        <h3>Lorem ipsum.</h3>
+                        <h3 class="clh3">Lorem ipsum.</h3>
                     </div>
                     <div class="col-9">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
+                        <p class="clparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
                             nisi
                             accusantium atque commodi quibusdam libero, tenetur doloribus natus iure iste quasi quaerat
                             quod
@@ -129,10 +133,10 @@
                         <img id="imagen" src="ASSETS/Logo Sofrecom.jpg" class="img-fluid" alt="...">
                     </div>
                     <div class="col-1">
-                        <h3>Lorem ipsum.</h3>
+                        <h3 class="clh3">Lorem ipsum.</h3>
                     </div>
                     <div class="col-9">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
+                        <p class="clparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
                             nisi
                             accusantium atque commodi quibusdam libero, tenetur doloribus natus iure iste quasi quaerat
                             quod
@@ -144,10 +148,10 @@
                         <img id="imagen" src="ASSETS/Logo Telecom.jpg" class="img-fluid" alt="...">
                     </div>
                     <div class="col-1">
-                        <h3>Lorem ipsum.</h3>
+                        <h3 class="clh3">Lorem ipsum.</h3>
                     </div>
                     <div class="col-9">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
+                        <p class="clparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
                             nisi
                             accusantium atque commodi quibusdam libero, tenetur doloribus natus iure iste quasi quaerat
                             quod
@@ -159,17 +163,17 @@
         <br>
         <!--Educación-->
         <section id="educación" class="educación">
-            <h1>Educación</h1>
+            <h1 class="clh1">Educación</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-2">
                         <img id="imagen" src="ASSETS/UBA Veterinaria.png" class="img-fluid" alt="...">
                     </div>
                     <div class="col-1">
-                        <h3>Lorem ipsum.</h3>
+                        <h3 class="clh3">Lorem ipsum.</h3>
                     </div>
                     <div class="col-9">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
+                        <p class="clparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
                             nisi
                             accusantium atque commodi quibusdam libero, tenetur doloribus natus iure iste quasi quaerat
                             quod
@@ -181,10 +185,10 @@
                         <img id="imagen" src="ASSETS/EscudoLenguasVivas.png" class="img-fluid" alt="...">
                     </div>
                     <div class="col-1">
-                        <h3>Lorem ipsum.</h3>
+                        <h3 class="clh3">Lorem ipsum.</h3>
                     </div>
                     <div class="col-9">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
+                        <p class="clparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
                             nisi
                             accusantium atque commodi quibusdam libero, tenetur doloribus natus iure iste quasi quaerat
                             quod
@@ -196,10 +200,10 @@
                         <img id="imagen" src="ASSETS/APLogo-20-20 (1).png" class="img-fluid" alt="...">
                     </div>
                     <div class="col-1">
-                        <h3>Lorem ipsum.</h3>
+                        <h3 class="clh3">Lorem ipsum.</h3>
                     </div>
                     <div class="col-9">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
+                        <p class="clparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
                             nisi
                             accusantium atque commodi quibusdam libero, tenetur doloribus natus iure iste quasi quaerat
                             quod
@@ -211,7 +215,7 @@
         <br>
         <!--Hard & Soft Skills"-->
         <section id="Hard & Soft Skills" class="Hard & Soft Skills">
-            <h1>Hard & Soft Skills</h1>
+            <h1 class="clh1">Hard & Soft Skills</h1>
             <br>
             <div class="container">
                 <div class="progress progress-striped">
@@ -242,7 +246,7 @@
                 </div>
             </div>
             <br>
-            <h3>Idiomas</h3>
+            <h1 class="clh1">Idiomas</h1>
             <br>
             <div class="container">
                 <div class="progress progress-striped">
@@ -262,17 +266,17 @@
         <br>
         <!--Proyectos-->
         <section id="proyectos" class="proyectos">
-            <h1>Proyectos</h1>
+            <h1 class="clh1">Proyectos</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-2">
                         <img id="imagen" src="ASSETS/Mi Portfolio.png" class="img-fluid" alt="...">
                     </div>
                     <div class="col-1">
-                        <h3>Lorem ipsum.</h3>
+                        <h3 class="clh3">Lorem ipsum.</h3>
                     </div>
                     <div class="col-9">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
+                        <p class="clparrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non deleniti reprehenderit magnam
                             nisi
                             accusantium atque commodi quibusdam libero, tenetur doloribus natus iure iste quasi quaerat
                             quod
@@ -281,7 +285,6 @@
                 </div>
             </div>
         </section>
-        <br>
     </main>
 
 
