--- a/tab1.html
+++ b/tab1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tab1</title>
+    <title>Tab</title>
     <script src="https://kit.fontawesome.com/23ecf5d810.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -39,15 +39,10 @@
                         </i>
                     </li>
                 </ul>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
             </div>
         </nav>
-        </div>
-
     </header>
+
     <section id="dashboard" class="dashboard">
         <div class="container-fluid text-center">
             <div class="row">
@@ -56,8 +51,8 @@
                     <div class="d-flex align-items-start">
                         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
-                            <a href="/index1.html" target="_blank"><button class="nav-link active" id="v-pills-home-tab"
-                                    type="button">Home</button></a>
+                            <a href="index.html" target="_blank"><button class="nav-link active" id="v-pills-home-tab"
+                                type="button">Home</button></a>
                             <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-profile" type="button" role="tab"
                                 aria-controls="v-pills-profile" aria-selected="false">Datos Personales</button>
@@ -70,9 +65,9 @@
                             <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-settings" type="button" role="tab"
                                 aria-controls="v-pills-settings" aria-selected="false">Skills</button>
-                            <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-settings1" type="button" role="tab"
-                                aria-controls="v-pills-settings" aria-selected="false">Proyectos</button>
+                            <button class="nav-link" id="v-pills-proyectos-tab" data-bs-toggle="pill"
+                                data-bs-target="#v-pills-proyectos" type="button" role="tab"
+                                aria-controls="v-pills-proyectos" aria-selected="false">Proyectos</button>
                         </div>
                         <!--
                         <div class="tab-content" id="v-pills-tabContent">
@@ -80,7 +75,7 @@
  
                           <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" 
                           tabindex="0">4</div>
-                          <div class="tab-pane fade" id="v-pills-settings1" role="tabpanel" aria-labelledby="v-pills-settings-tab" 
+                          <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" 
                           tabindex="0">5</div>
                         </div>-->
                     </div>
@@ -114,8 +109,8 @@
                         </div>
                     </div>
 
-                    <div class="tab-pane fade" id="v-pills-miperf" role="tabpanel" aria-labelledby="v-pills-miperf-tab" 
-                    tabindex="0">
+                    <div class="tab-pane fade" id="v-pills-miperf" role="tabpanel" 
+                        aria-labelledby="v-pills-miperf-tab" tabindex="0">
                         <h4 class="text-center">Experiencia</h4>
                         <div class="mb-3">
                             <label for="formFile" class="form-label">Logo</label>
@@ -163,6 +158,7 @@
                             <button type="button" class="btn btn-success">Guardar</button>
                         </div>
                     </div>
+
 
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
                         aria-labelledby="v-pills-messages-tab" tabindex="0">
@@ -213,57 +209,51 @@
                             <button type="button" class="btn btn-success">Guardar</button>
                         </div>
                     </div>
-
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
-                        aria-labelledby="v-pills-settings-tab" tabindex="0">
-                        <label for="customRange1" class="form-label">Example Range</label>
-                        <button type="button" class="btn btn-success">Guardar</button>
-                        <input type="range" class="form-range" id="customRange1">
-                        
-                        <label for="customRange1" class="form-label">Example range</label>
-                        <button type="button" class="btn btn-success">Guardar</button>
+                        aria-labelledby="v-pills-settings-tab" tabindex="0"><label for="customRange1"
+                            class="form-label">Example Range</label>
                         <input type="range" class="form-range" id="customRange1">
 
                         <label for="customRange1" class="form-label">Example range</label>
-                        <button type="button" class="btn btn-success">Guardar</button>
                         <input type="range" class="form-range" id="customRange1">
 
                         <label for="customRange1" class="form-label">Example range</label>
-                        <button type="button" class="btn btn-success">Guardar</button>
                         <input type="range" class="form-range" id="customRange1">
 
                         <label for="customRange1" class="form-label">Example range</label>
-                        <button type="button" class="btn btn-success">Guardar</button>
                         <input type="range" class="form-range" id="customRange1">
 
                         <label for="customRange1" class="form-label">Example range</label>
-                        <button type="button" class="btn btn-success">Guardar</button>
+                        <input type="range" class="form-range" id="customRange1">
+
+                        <label for="customRange1" class="form-label">Example range</label>
                         <input type="range" class="form-range" id="customRange1">
                     </div>
 
-                    <div class="tab-pane fade" id="v-pills-settings1" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">
-                        <h4 class="text-center">Proyecto</h4>
-                        <div class="mb-3">
-                            <label for="formFile" class="form-label">Foto del Proyecto</label>
-                            <input class="form-control" type="file" id="formFile">
-                            <button type="button" class="btn btn-success">Guardar</button>
-                        </div>
-                        <div class="mb-3">
-                            <label for="formFile" class="form-label">Título</label>
-                            <input class="form-control" type="text" id="formFile">
-                            <button type="button" class="btn btn-success">Guardar</button>
-                        </div>
-                        <div class="mb-3">
-                            <label for="formFile" class="form-label">Desc Lenguages</label>
-                            <input class="form-control" type="text" id="formFile">
-                            <button type="button" class="btn btn-success">Guardar</button>
+                    <div class="tab-pane fade" id="v-pills-proyectos" role="tabpanel" 
+                        aria-labelledby="v-pills-proyectos-tab" tabindex="0">
+                    <h4 class="text-center">Proyectos</h4>
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Logo</label>
+                        <input class="form-control" type="file" id="formFile">
+                        <button type="button" class="btn btn-success">Guardar</button>
                     </div>
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Fecha</label>
+                        <input class="form-control" type="text" id="formFile">
+                        <button type="button" class="btn btn-success">Guardar</button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Desc del Proyecto</label>
+                        <input class="form-control" type="text" id="formFile">
+                        <button type="button" class="btn btn-success">Guardar</button>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
-
-    </section>
+</section>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
