--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               width="100%"
               title="Foto Alejandra"
             />
-            <h3 id="cursiva">Alejandra Visconti</h3>
+            <h3 id="cursiva">Alejandra ViscontiOTRO</h3>
             <h5 class="clh5">Programadora Full Stack Jr.</h5>
           </div>
           <div class="col-9">
