--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           /></a>
           <ul class="list-group list-group-horizontal">
             <!--<a target="_blank" href="http://www.clarin.com">Ir a Clarin</a>-->
-            <li class="list-group-item">
-              <i class="fa-brands fa-instagram fa-2xl"></i>
+            <li class="list-group-item"><a target="_blank" href="http://www.instagram.com">
+              <i class="fa-brands fa-instagram fa-2xl"></i></a>
             </li>
-            <li class="list-group-item">
-              <i class="fa-brands fa-linkedin fa-2xl"></i>
+            <li class="list-group-item"><a target="_blank" href="http://www.linkedin.com">
+              <i class="fa-brands fa-linkedin fa-2xl"></i></a>
             </li>
-            <li class="list-group-item">
-              <i class="fa-brands fa-facebook fa-2xl"></i>
+            <li class="list-group-item"><a target="_blank" href="http://www.facebook.com">
+              <i class="fa-brands fa-facebook fa-2xl"></i></a>
             </li>
 
             <!-- Button trigger modal Botón para Loguearse -->
@@ -148,13 +148,13 @@
               src="ASSETS/foto Ale.jpg"
               alt="..."
               width="100%"
-              title="Foto Alejandra"
-            />
+              title="Foto Alejandra"/>
             <h3 id="cursiva">Alejandra Visconti</h3>
-            <h5 class="clh5">Programadora Full Stack Jr.</h5>
+            <a target="_blank" href="ASSETS/CV de Ale.docx"><button type="button" class="btn btn-primary">CV Alejandra</button></a>
           </div>
           <div class="col-9">
             <h1 class="clh1">Sobre mí</h1>
+            <h5 class="clh5">Programadora Full Stack Jr.</h5>
             <h4 class="clh4">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
               velit fuga doloribus assumenda numquam ipsum iure qui voluptas
