--- a/index1.html
+++ b/index1.html
@@ -30,9 +30,15 @@
                     <img src="ASSETS/APLogo-20-20 (1).png" alt="" width="20%" height="..."></a>
                 <ul class="list-group list-group-horizontal">
                     <!--<a target="_blank" href="http://www.clarin.com">Ir a Clarin</a>-->
-                    <li class="list-group-item"><i class="fa-brands fa-instagram fa-2xl"></i></li>
-                    <li class="list-group-item"><i class="fa-brands fa-linkedin fa-2xl"></i></li>
-                    <li class="list-group-item"><i class="fa-brands fa-facebook fa-2xl"></i></li>
+                    <li class="list-group-item"><a target="_blank" href="http://www.instagram.com">
+                        <i class="fa-brands fa-instagram fa-2xl"></i></a>
+                      </li>
+                      <li class="list-group-item"><a target="_blank" href="http://www.linkedin.com">
+                        <i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                      </li>
+                      <li class="list-group-item"><a target="_blank" href="http://www.facebook.com">
+                        <i class="fa-brands fa-facebook fa-2xl"></i></a>
+                      </li>
 
                     <!-- Button trigger modal Botón para Loguearse -->
                     <li class="list-group-item">
@@ -94,10 +100,11 @@
                 <div class="col-3">
                     <img src="ASSETS/foto Ale.jpg" alt="..." width="100%" title="Foto Alejandra">
                     <h3 id="cursiva">Alejandra Visconti</h3>
-                    <h5 class="clh5">Programadora Full Stack Jr.</h5>
-                </div>
+                    <a target="_blank" href="ASSETS/CV de Ale.docx"><button type="button" class="btn btn-primary">CV Alejandra</button></a>
+                    </div>
                 <div class="col-9">
                     <h1 class="clh1">Sobre mí</h1>
+                    <h5 class="clh5">Programadora Full Stack Jr.</h5>
                     <h4 class="clh4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat velit fuga
                         doloribus assumenda
                         numquam
