--- a/tab.html
+++ b/tab.html
@@ -32,11 +32,12 @@
                     <li class="list-group-item"><i class="fa-brands fa-linkedin fa-2xl"></i></li>
                     <li class="list-group-item"><i class="fa-brands fa-facebook fa-2xl"></i></li>
 
-                    <!-- Button trigger modal Botón para Loguearse -->
+                    <!-- Button trigger modal Botón para Desloguearse -->
                     <li class="list-group-item">
+                        <a href="index.html">
                         <i class="fa-solid fa-user fa-2xl" class="btn btn-primary" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                        </i>
+                        </i></a>
                     </li>
                 </ul>
             </div>
