--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body id="body">
     <!--Barra de Navegación-->
     <header>
-      <nav class="navbar navbar-expand-lg bg-primary fixed-top">
+      <nav class="navbar navbar-expand-lg bg-danger fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
